--- a/styles/baseStyle.css
+++ b/styles/baseStyle.css
@@ -1,17 +1,17 @@
+/* 基本样式  */
+/* 去除默认样式 */
 * {
     margin: 0;
     padding: 0;
     transition: all 0.3s ease-in-out;
 }
 
-/* *:hover {
-    box-shadow: 0 0 3px 1px rgb(0, 72, 255);
-} */
-
+/* 隐藏元素  */
 .hide {
     display: none;
 }
 
+/* 拖动中的样式 */
 .dragging {
     transition: none;
     z-index: 4;
