--- a/styles/dot.css
+++ b/styles/dot.css
@@ -1,11 +1,10 @@
 .dot {
     width: 10px;
     height: 10px;
-    border-radius: 50%;
-    /* background-color: #000; */
     position: absolute;
     user-select: none;
     z-index: 3;
+    border: 1px solid #000;
 }
 
 .dot:hover {
@@ -13,19 +12,14 @@
 }
 
 .dot.temp {
-    /* background-color: #f00; */
+    border: none;
     z-index: 1;
 }
 
 .dot.temp:hover {
-    background-color: #ff0;
+    border: 1px solid #000;
+}
+
+.dot.temp:hover {
     opacity: 1;
-}
-
-.dot.input {
-    background-color: #f00;
-}
-
-.dot.output {
-    background-color: #0f0;
 }
