--- a/styles/node.css
+++ b/styles/node.css
@@ -1,13 +1,21 @@
+:root {
+    --node-bg-color: #fff;
+}
+
 .node {
     position: absolute;
     width: 150px;
-    /* height: 100px; */
-    background-color: #fff;
-    /* border: 1px solid #ccc; */
-    border-radius: 5px;
-    box-shadow: 0 0 5px #ccc;
     transition: none;
     z-index: 3;
+    border: 1px solid #ccc;
+    padding: 8px;
+}
+
+.nodeBox {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border: 1px solid #ccc;
 }
 
 .node.dragging {
@@ -15,46 +23,38 @@
 }
 
 .nodeBox>.header {
-    background-color: #aaa;
-    border-radius: 5px 5px 0 0;
+    border: 1px solid #ccc;
     height: 20px;
-    line-height: 20px;
-    padding: 0 10px;
-    color: #fff;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.nodeBox>.header>input {
-    width: 80%;
-    /* height: 20px; */
-    border: none;
-    background-color: transparent;
-    color: #fff;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.nodeBox>.header>input:focus {
-    outline: none;
 }
 
 .nodeBox>.header:hover {
-    background-color: #888;
+    border: 1px solid #000;
 }
 
 .nodeBox>.content {
-    padding: 10px;
-    font-size: 12px;
-    line-height: 1.5;
-    color: #333;
+    height: calc(100% - 20px);
+    overflow: auto;
+    overflow-wrap: break-word;
+}
+
+.nodeBox>.content::-webkit-scrollbar {
+    width: 2px;
+    height: 5px;
+}
+
+.nodeBox>.content::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 5px;
+}
+
+.nodeBox>.content::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
 }
 
 .node>.dot {
     position: absolute;
     width: 10px;
     height: 10px;
-    border-radius: 50%;
     background-color: #000;
     opacity: 0.5;
     transition: all 0.3s ease-in-out;
@@ -65,13 +65,23 @@
 }
 
 .dot.input {
-    background-color: chartreuse;
     top: 5px;
     left: -5px;
 }
 
 .dot.output {
-    background-color: orangered;
     top: 5px;
     right: -5px;
+}
+
+.resizerBottomRight {
+    width: 8px;
+    height: 8px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    cursor: nwse-resize;
+    z-index: 1;
+    background-color: #00000052;
+    transition: none;
 }
