--- a/app/main/yun/yun.css
+++ b/app/main/yun/yun.css
@@ -24,6 +24,29 @@
 .yun>.box>.content {
     width: 100%;
     height: calc(100% - 1.6rem);
-    overflow: hidden;
+    overflow: auto;
     background-color: rgb(255, 255, 255);
+}
+
+.yun>.box>.content:hover {
+    cursor: text;
+}
+
+.yun>.box>.content:focus {
+    outline: none;
+}
+
+.yun>.box>.content::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
+.yun>.box>.content::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 3px;
+}
+
+.yun>.box>.content::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    cursor: pointer;
 }
